update val
