# routes/books.js
@@ -3,15 +3,16 @@ const express = require('express');
 const router = express.Router();
 
 const bookController =  require('../controller/books');
+const validation = require('../middleware/validate');
 
 router.get('/', bookController.getAllBooks);
 
 router.get('/:id', bookController.getSingleBook);
 
 //patch or post can be used to update
-router.post('/', bookController.createBook);
+router.post('/', validation.saveBooks, bookController.createBook);
 
-router.put('/:id', bookController.updateBook);
+router.put('/:id', validation.saveBooks, bookController.updateBook);
 
 router.delete('/:id', bookController.deleteBook);
 
